--- a/gula-dao/package.json
+++ b/gula-dao/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gula-dao",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "private": false,
   "scripts": {
     "dev": "next dev",
@@ -8,17 +8,26 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gulagulali404/Gula-DAO"
+  },
+  "keywords": [
+    "next-js"
+  ],
+  "author": "gulagulali404",
   "dependencies": {
+    "arts-dao": "^1.1.3",
+    "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1"
+    "eslint-config-next": "14.1.1",
+    "typescript": "^5"
   }
 }
