--- a/gula-dao/package.json
+++ b/gula-dao/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gula-dao",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "private": false,
   "scripts": {
     "dev": "next dev",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gulagulali404/Gula-DAO"
+    "url": "https://github.com/gulagulali404/Gula-DAO"
   },
   "keywords": [
     "next-js"
@@ -20,7 +20,8 @@
     "arts-dao": "^1.1.3",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yunnie-dao": "^1.1.6"
   },
   "devDependencies": {
     "@types/node": "^20",
