--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gula-dao",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gulagulali404/Gula-DAO"
+    "url": "https://github.com/gulagulali404/Gula-DAO"
   },
   "keywords": [
     "next-js"
