--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gula-dao",
-  "version": "1.1.4",
-  "description": "",
+  "version": "1.1.6",
+  "description": "decentralized autonomous organization aimed at providing innovative solutions for community-driven projects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
